globus-common (17.3-1+gt6.@distro@) @distro@; urgency=low

  * use win compatible unsetenv

 -- Globus Toolkit <support@globus.org>  Thu, 25 Jan 2018 15:04:55 -0600

globus-common (17.2-1+gt6.@distro@) @distro@; urgency=low

  * Merge #110 from ellert: Fix regex for perl 5.26 compatibility
  * Fix globus_location_test when GLOBUS_LOCATION environment is set

 -- Globus Toolkit <support@globus.org>  Thu, 28 Sep 2017 08:40:10 -0400

globus-common (17.1-1+gt6.@distro@) @distro@; urgency=low

  * Add missing file

 -- Globus Toolkit <support@globus.org>  Fri, 03 Mar 2017 12:41:06 -0500

globus-common (17.0-1+gt6.@distro@) @distro@; urgency=low

  * add additional error handling api

 -- Globus Toolkit <support@globus.org>  Fri, 03 Mar 2017 10:09:47 -0600

globus-common (16.9-1+gt6.@distro@) @distro@; urgency=low

  * Fix crash in globus_eval_path

 -- Globus Toolkit <support@globus.org>  Fri, 06 Jan 2017 17:10:04 -0500

globus-common (16.8-1+gt6.@distro@) @distro@; urgency=low

  * Replace docbook with asciidoc

 -- Globus Toolkit <support@globus.org>  Thu, 08 Sep 2016 11:22:34 -0400

globus-common (16.7-1+gt6.@distro@) @distro@; urgency=low

  * Update bug report URL

 -- Globus Toolkit <support@globus.org>  Sat, 20 Aug 2016 09:11:21 -0400

globus-common (16.6-1+gt6.@distro@) @distro@; urgency=low

  * Updates for running thread tests without installing

 -- Globus Toolkit <support@globus.org>  Tue, 16 Aug 2016 09:50:14 -0400

globus-common (16.5-1+gt6.@distro@) @distro@; urgency=low

  * don't redefine snprintf and vsnprintf when using mingw versions

 -- Globus Toolkit <support@globus.org>  Wed, 22 Jun 2016 16:52:57 -0500

globus-common (16.4-1+gt6.@distro@) @distro@; urgency=low

  * Spelling

 -- Globus Toolkit <support@globus.org>  Tue, 03 May 2016 16:28:11 -0400

globus-common (16.3-1+gt6.@distro@) @distro@; urgency=low

  * Thread pc files dlpreopen and dlopen variables

 -- Globus Toolkit <support@globus.org>  Thu, 07 Apr 2016 10:33:31 -0400
