@@ -1,3 +1,9 @@
+globus-gridftp-server (12.5-1+gt6.@distro@) @distro@; urgency=low
+
+  * win32 fix
+
+ -- Globus Toolkit <support@globus.org>  Wed, 07 Feb 2018 00:23:59 -0600
+
 globus-gridftp-server (12.4-1+gt6.@distro@) @distro@; urgency=low
 
   * Improve search for user env in enable-sshftp script
