@@ -1,3 +1,9 @@
+globus-common (17.4-1+gt6.@distro@) @distro@; urgency=low
+
+  * win32 fix
+
+ -- Globus Toolkit <support@globus.org>  Wed, 07 Feb 2018 00:25:35 -0600
+
 globus-common (17.3-1+gt6.@distro@) @distro@; urgency=low
 
   * use win compatible unsetenv
